# cly-45

./: README.md  create_test_images.py  pyproject.toml  test_exif_report.csv
imgpurge/: __init__.py  cli.py  exif_ops.py  image_ops.py  logger.py  utils.py
imgpurge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
processed/: .test_image_0_3781da3f.imgpurge_processed  .test_image_1_60e859e0.imgpurge_processed  .test_image_22178319.imgpurge_processed
test/: .test_image_b79aed14.imgpurge_processed
test_batch_output/: .sub_image_3d37bc78.imgpurge_processed
test_output/: .test_image_2_adf2df32.imgpurge_processed
